# 2do-app

./: .gitignore  Dockerfile  README.md  dev.Dockerfile  docker-compose.yml  dotenv  pyproject.toml  requirements.txt  values.yaml
src/2do/: __init__.py  __main__.py
src/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
src/frontend/src/: App.jsx  Appbar.jsx  index.jsx
src/frontend/src/routes/: Root.jsx
src/todo/: __init__.py  __main__.py  app.py  mongo_database.py  utils.py
tests/: test_database.py
