# Package setup for 2do
# ==========================

# This file is used to install the package and its dependencies.
# Using this file, you can install the package using the following command:
#     pip install -e .

# Note: The -e flag is used to install the package in editable mode. This means that
# any changes made to the source code will be reflected in the installed package.

# For more information on how to use this file, see the following documentation:
#     https://packaging.python.org/tutorials/packaging-projects/
#     https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[project]
name = "2do"
description = "2do App - Portfolio Project"
version = "0.0.1"
authors = [
  { name="Jessica Sarlin" },
  # { name="Jessica Sarlin", email="jessica.sarlin@gmail.com" }
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
test = [
  "pytest",
  "requests",
]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocs-git-revision-date-localized-plugin",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
